--- a/ami_sas/ami_sas/src/main/resources/application.properties
+++ b/ami_sas/ami_sas/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 # Mostrar las instrucciones, en consola, de sql que se ejecutan
 spring.jpa.show-sql=true
 
+jwt.secret=TuClaveSecretaMuySeguraParaJWT
+jwt.expiration=86400000
+
+# Configuracion de la seguridad
+
